# subcheckbot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  t.py
.github/workflows/: ci.yml  deploy-prod.yml
src/: bot.py  run_polling.py  settings.py  webhook_app.py
src/bot/: bot.py  gunicorn.conf.py  utils.py  webhook_app.py
src/bot/handlers/: __init__.py  admin_menu.py  channel_menu.py  chat_menu.py  group_messages_handler.py  start_menu.py
src/bot/middlewares/: admin_auth.py  auth.py
src/bot/schemas/: general.py
src/bot/schemas/callbacks/: admin_menu.py  chat_menu.py
src/db/: __init__.py  manager.py  models.py
src/handlers/: __init__.py  admin_menu.py  channel_menu.py  chat_menu.py  group_messages_handler.py  settings.py  start.py  utils.py
src/middlewares/: admin_auth.py  auth.py
src/schemas/callbacks/: admin_menu.py  channel_menu.py  chat_menu.py
