[tool.poetry]
name = "sub-checker"
version = "0.1.0"
description = ""
authors = ["nilevashov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "1.4.51"
asyncpg = "*"
aiogram = "3.13.1"
aiosqlite = "*"
loguru = "*"
redis = "^5.0.1"
celery = "*"
sentry-sdk = "^2.19.2"
pydantic = ">=2.4.1,<2.10"
pydantic-settings = "^2.8.1"
fastapi = "^0.115.11"
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"
pip-licenses = "^5.0.0"
prometheus-fastapi-instrumentator = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-postgresql = "^7.0.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest:main"
